{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 238,
  "lineage": "02955a83-e101-20cc-cef5-d42bb747149d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "testInstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001083bce630cc561",
            "arn": "arn:aws:ec2:us-west-2:675906086666:instance/i-04adee3c1f87105a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04adee3c1f87105a7",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "publicKey",
            "monitoring": false,
            "primary_network_interface_id": "eni-04bbf428a5691b87e",
            "private_dns": "ip-10-1-0-213.us-west-2.compute.internal",
            "private_ip": "10.1.0.213",
            "public_dns": "ec2-54-244-129-174.us-west-2.compute.amazonaws.com",
            "public_ip": "54.244.129.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 450,
                "volume_id": "vol-04017099faa6db10d",
                "volume_size": 150,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036e23d7a1d3c2c33",
            "tags": {
              "Environment": "Production"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08c7a486fecb17c47"
            ]
          },
          "depends_on": [
            "aws_key_pair.ec2key",
            "aws_security_group.sg_22_80",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08c371158c1ab93f8",
            "owner_id": "675906086666",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0da0955051cafc92d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bd54347537b8c3b5",
            "owner_id": "675906086666",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08c371158c1ab93f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0da0955051cafc92d"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02829b43206baa38b",
            "route_table_id": "rtb-0bd54347537b8c3b5",
            "subnet_id": "subnet-036e23d7a1d3c2c33"
          },
          "depends_on": [
            "aws_route_table.rtb_public",
            "aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22_80",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675906086666:security-group/sg-08c7a486fecb17c47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c7a486fecb17c47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "675906086666",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0da0955051cafc92d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675906086666:subnet/subnet-036e23d7a1d3c2c33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-036e23d7a1d3c2c33",
            "map_public_ip_on_launch": true,
            "owner_id": "675906086666",
            "tags": {
              "Environment": "Production"
            },
            "vpc_id": "vpc-0da0955051cafc92d"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:675906086666:vpc/vpc-0da0955051cafc92d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0104b0c3dfb87ba5a",
            "default_route_table_id": "rtb-03f46d4a68130d13a",
            "default_security_group_id": "sg-047e66ed062b9db73",
            "dhcp_options_id": "dopt-eb09d993",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0da0955051cafc92d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03f46d4a68130d13a",
            "owner_id": "675906086666",
            "tags": {
              "Environment": "Production"
            }
          }
        }
      ]
    }
  ]
}